[gd_scene load_steps=2 format=3 uid="uid://ccfktpl2tcbrj"]

[ext_resource type="Script" uid="uid://cg43k0s7bykg2" path="res://scenes/book.gd" id="1_ble1a"]

[node name="Book" type="Node2D"]
script = ExtResource("1_ble1a")

[node name="PageBack" type="Sprite2D" parent="."]

[node name="PageFront" type="Sprite2D" parent="."]

[node name="TurnSfx" type="AudioStreamPlayer" parent="."]
